--- a/index.html
+++ b/index.html
@@ -143,11 +143,106 @@
                     </div>
                 </div>
             </section>
+
             <section class="text-center">
                 <div class="container">
-                    <h2 class="type--bold mb-3 text--color-madrasah-dark">Program Madrasah Digital</h2>
+                    <h2 class="type--bold mb-3 text--color-madrasah-dark">Apa itu Madrasah Digital?</h2>
+                    <p class="lead mb-5"> Dengarkan apa kata mereka tentang program Madrasah Digital </p>
+
+                    <div class="row">
+                        <div class="col-md-12 col-lg-10">
+                            <div class="video-cover border--round">
+                                <div class="background-image-holder"> <img alt="image" src="assets/images/img-video-about.jpg"> </div>
+                                <div class="video-play-icon"></div> <iframe data-src="https://www.youtube.com/embed/6p45ooZOOPo?autoplay=1" allowfullscreen="allowfullscreen"></iframe> 
+                            </div> 
+                            <span>Stack includes Variant Page Builder — used by over <strong>17,000</strong> customers <a target="_blank" href="#customise-template">Try Now ↗</a></span> 
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+            <!--<section class="switchable feature-large switchable--switch">
+                <div class="container">
+                    <div class="row justify-content-around">
+                        <div class="col-md-6"> <img alt="Image" class="border--round box-shadow-wide" src="assets/images/madrasah-digital-view.jpg"> </div>
+                        <div class="col-md-6 col-lg-5">
+                            <div class="switchable__text mt-0">
+                                <h2 class="type--bold text--color-madrasah-dark">Apa itu Madrasah Digital?</h2>
+                                <p class="lead"> Pesantren IT dan Tahfidz Al-Qur’an Madrasah Digital merupakan lembaga pendidikan non formal berbasis pesantren dengan fokus pada hafalan Al-Qur’an dan pemberian pembekalan keahlian dalam bidang bisnis dan teknologi kepada para santri. </p> 
+                                <a class="btn" href="#">
+                                    <span class="btn__text">Selengkapnya</span>
+                                </a> </div>
+                        </div>
+                    </div>
+                </div>
+            </section>-->
+
+            <section class="bg--secondary text-center">
+                <div class="container">
+                    <h2 class="type--bold mb-3 text--color-madrasah-dark">Program Pembekalan Keahlian</h2>
+                    <div class="row justify-content-center">
+                        <div class="col-lg-6 col-md-6">
+                            <p class="lead mb-5"> Program-program yang diselenggarakan di Madrasah Digital untuk membentuk mental dan habit para santri</p>
+                        </div>
+                    </div>
+
+                    <div class="row">
+                        <div class="col-md-3 col-6">
+                            <a href="#" class="feature"> <img alt="Pic" src="assets/img/accom-2.jpg">
+                                <h5 class="mb--0">Belajar Bisnis Online</h5>
+                                <div>Entire home ◦ 4 bedrooms</div>
+                            </a>
+                        </div>
+                        <div class="col-md-3 col-6">
+                            <a href="#" class="feature"> <img alt="Pic" src="assets/img/accom-1.jpg">
+                                <h5 class="mb--0">Belajar Membuat Website</h5>
+                                <div>Entire home ◦ 2 bedrooms</div>
+                            </a>
+                        </div>
+                        <div class="col-md-3 col-6">
+                            <a href="#" class="feature"> <img alt="Pic" src="assets/img/accom-3.jpg">
+                                <h5 class="mb--0">Belajar Membuat Aplikasi Android</h5>
+                                <div>Entire home ◦ 3 bedrooms</div>
+                            </a>
+                        </div>
+                        <div class="col-md-3 col-6">
+                            <a href="#" class="feature"> <img alt="Pic" src="assets/img/accom-4.jpg">
+                                <h5 class="mb--0">Belajar Copywriting</h5>
+                                <div>Entire home ◦ 2 bedrooms</div>
+                            </a>
+                        </div>
+                        <div class="col-md-3 col-6">
+                            <a href="#" class="feature"> <img alt="Pic" src="assets/img/accom-1.jpg">
+                                <h5 class="mb--0">Belajar Internet Marketing</h5>
+                                <div>Entire home ◦ 2 bedrooms</div>
+                            </a>
+                        </div>
+                        <div class="col-md-3 col-6">
+                            <a href="#" class="feature"> <img alt="Pic" src="assets/img/accom-4.jpg">
+                                <h5 class="mb--0">Belajar Video Editing</h5>
+                                <div>Entire home ◦ 2 bedrooms</div>
+                            </a>
+                        </div>
+                        <div class="col-md-3 col-6">
+                            <a href="#" class="feature"> <img alt="Pic" src="assets/img/accom-2.jpg">
+                                <h5 class="mb--0">Belajar Hidroponik</h5>
+                                <div>Entire home ◦ 4 bedrooms</div>
+                            </a>
+                        </div>
+                        <div class="col-md-3 col-6">
+                            <a href="#" class="feature"> <img alt="Pic" src="assets/img/accom-3.jpg">
+                                <h5 class="mb--0">Belajar Public Speaking</h5>
+                                <div>Entire home ◦ 3 bedrooms</div>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section class="text-center">
+                <div class="container">
                     <div class="row">
                         <div class="col-lg-6 col-md-6">
+                            <h2 class="type--bold mb-3 text--color-madrasah-dark">Program Habit Development</h2>
                             <p class="lead mb-5"> Program-program yang diselenggarakan di Madrasah Digital untuk membentuk mental dan habit para santri</p>
                         </div>
                     </div>
@@ -196,28 +291,16 @@
                     </div>
                 </div>
             </section>
-            <section class="switchable feature-large bg--secondary switchable--switch">
-                <div class="container">
-                    <div class="row justify-content-around">
-                        <div class="col-md-6"> <img alt="Image" class="border--round box-shadow-wide" src="assets/images/madrasah-digital-view.jpg"> </div>
-                        <div class="col-md-6 col-lg-5">
-                            <div class="switchable__text mt-0">
-                                <h2 class="type--bold text--color-madrasah-dark">Apa itu Madrasah Digital?</h2>
-                                <p class="lead"> Pesantren IT dan Tahfidz Al-Qur’an Madrasah Digital merupakan lembaga pendidikan non formal berbasis pesantren dengan fokus pada hafalan Al-Qur’an dan pemberian pembekalan keahlian dalam bidang bisnis dan teknologi kepada para santri. </p> 
-                                <a class="btn" href="#">
-                                    <span class="btn__text">Selengkapnya</span>
-                                </a> </div>
-                        </div>
-                    </div>
-                </div>
-            </section>
+            
+
+
             <section class="switchable switchable--switch imagebg height-50 parallax" data-overlay="2">
                 <div class="background-image-holder"><img alt="background" src="assets/images/bg-pesantren-sawah.jpg"></div>
                 <div class="container pos-vertical-center">
-                    <div class="row">
-                        <div class="col-md-6">
-                            <h2 class="type--bold">Design-driven and perfect for modern startups</h2>
-                            <p class="lead"> Stack offers a clean and contemporary to suit a range of purposes from corporate, tech startup, marketing site to digital storefront. </p>
+                    <div class="row justify-content-center text-center">
+                        <div class="col-md-8">
+                            <h3 class="type--bold">1 Tahun hafal 5 juz Al-Qur’an dan memiliki keahlian di bidang IT yang siap bersaing di industri 4.0</h3>
+                            <p class="lead"> Menjadi insan yang bertaqwa dan kompeten</p>
                         </div>
                     </div>
                 </div>
@@ -225,7 +308,7 @@
             <section class="text-center bg--secondary">
                 <div class="container">
                     <h2 class="type--bold mb-3 text--color-madrasah-dark">Produk Madrasah Digital</h2>
-                    <p class="lead mb-5"> Produk-produk yang telah membantu kami menciptakan pesantren gratis untuk para penghafal Al-Qur'an </p>
+                    <p class="lead mb-5"> Produk-produk yang telah membantu kami membangun pesantren gratis untuk para penghafal Al-Qur'an </p>
 
                     <div class="row justify-content-center">
                         <div class="col-md-4">
@@ -241,27 +324,15 @@
                             <div class="feature feature-1"> <img alt="Image" src="assets/images/produk-dirosah.jpg">
                                 <div class="feature__body boxed boxed--lg boxed--border">
                                     <h3 class="type--bold text--color-madrasah-dark">Dirosah</h3>
-                                    <p class="lead"> Coming Soom </p> <!--<a class="btn" href="#">
-                                    <span class="btn__text">Lihat detail</span>-->
+                                    <p class="lead"> Aplikasi Android untuk belajar agama Islam dengan kurikulum yang terarah </p> <a class="btn" href="#">
+                                    <span class="btn__text">Lihat detail</span>
                                 </a> </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </section>
-            <section class="text-center">
-                <div class="container">
-                    <h2 class="type--bold mb-3 text--color-madrasah-dark">Kata Mereka tentang Madrasah Digital</h2>
-                    <p class="lead mb-5"> Dengarkan apa kata mereka tentang program Madrasah Digital </p>
-
-                    <div class="row">
-                        <div class="col-md-12 col-lg-10">
-                            <div class="video-cover border--round">
-                                <div class="background-image-holder"> <img alt="image" src="assets/img/cowork-5.jpg"> </div>
-                                <div class="video-play-icon"></div> <iframe data-src="https://www.youtube.com/embed/6p45ooZOOPo?autoplay=1" allowfullscreen="allowfullscreen"></iframe> </div> <span>Stack includes Variant Page Builder — used by over <strong>17,000</strong> customers <a target="_blank" href="#customise-template">Try Now ↗</a></span> </div>
-                    </div>
-                </div>
-            </section>
+            
             <section class="switchable feature-large bg--secondary">
                 <div class="container">
                     <div class="row justify-content-around">
@@ -290,7 +361,7 @@
                         <a href="https://www.persis67benda.com/" target="_blank"><img alt="Partner Madrasah Digital - Pecinta Quran" class="d-inline-block logo-partner mx-5 mb-5" src="assets/images/logo-benda.png"></a>
                     </div>
 
-                    <a class="btn mt-4" href="https://forms.gle/JX4E6tx9WeUXaWnz8" target="_blank"><span class="btn__text">Gabung Sebagai Mitra</span></a>
+                    <a class="btn mt-4" href="https://forms.gle/JX4E6tx9WeUXaWnz8" target="_blank"><span class="btn__text">Gabung sebagai mitra</span></a>
                 </div>
             </section>
             <section class="switchable switchable--switch bg--secondary">
