Program pembekalan keahlian

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                                 <div class="background-image-holder"> <img alt="image" src="assets/images/img-video-about.jpg"> </div>
                                 <div class="video-play-icon"></div> <iframe data-src="https://www.youtube.com/embed/6p45ooZOOPo?autoplay=1" allowfullscreen="allowfullscreen"></iframe> 
                             </div> 
-                            <span>Stack includes Variant Page Builder — used by over <strong>17,000</strong> customers <a target="_blank" href="#customise-template">Try Now ↗</a></span> 
+                            <!--<span>Stack includes Variant Page Builder — used by over <strong>17,000</strong> customers <a target="_blank" href="#customise-template">Try Now ↗</a></span>--> 
                         </div>
                     </div>
                 </div>
@@ -182,58 +182,74 @@
                     <h2 class="type--bold mb-3 text--color-madrasah-dark">Program Pembekalan Keahlian</h2>
                     <div class="row justify-content-center">
                         <div class="col-lg-6 col-md-6">
-                            <p class="lead mb-5"> Program-program yang diselenggarakan di Madrasah Digital untuk membentuk mental dan habit para santri</p>
+                            <p class="lead mb-5"> Para santri akan dibekali berbagai keahlian teknis agar menjadi pribadi yang kompeten</p>
                         </div>
                     </div>
 
                     <div class="row">
                         <div class="col-md-3 col-6">
-                            <a href="#" class="feature"> <img alt="Pic" src="assets/img/accom-2.jpg">
-                                <h5 class="mb--0">Belajar Bisnis Online</h5>
-                                <div>Entire home ◦ 4 bedrooms</div>
-                            </a>
+                            <div class="program-madrasah mb-5">
+                                <div class="program-icon"> 
+                                    <img alt="Belajar Bisnis Online" src="assets/images/icon-program-1.jpg" class="rounded rounded-circle">
+                                </div>
+                                <h4 class="mt-3">Bisnis Online</h4>
+                            </div>
                         </div>
                         <div class="col-md-3 col-6">
-                            <a href="#" class="feature"> <img alt="Pic" src="assets/img/accom-1.jpg">
-                                <h5 class="mb--0">Belajar Membuat Website</h5>
-                                <div>Entire home ◦ 2 bedrooms</div>
-                            </a>
+                            <div class="program-madrasah mb-5">
+                                <div class="program-icon"> 
+                                    <img alt="Belajar Membuat Website" src="assets/images/icon-program-2.jpg" class="rounded rounded-circle">
+                                </div>
+                                <h4 class="mt-3">Membuat Website</h4>
+                            </div>
                         </div>
                         <div class="col-md-3 col-6">
-                            <a href="#" class="feature"> <img alt="Pic" src="assets/img/accom-3.jpg">
-                                <h5 class="mb--0">Belajar Membuat Aplikasi Android</h5>
-                                <div>Entire home ◦ 3 bedrooms</div>
-                            </a>
+                            <div class="program-madrasah mb-5">
+                                <div class="program-icon"> 
+                                    <img alt="Belajar Membuat Aplikasi Android" src="assets/images/icon-program-3.jpg" class="rounded rounded-circle">
+                                </div>
+                                <h4 class="mt-3">Membuat Android App</h4>
+                            </div>
                         </div>
                         <div class="col-md-3 col-6">
-                            <a href="#" class="feature"> <img alt="Pic" src="assets/img/accom-4.jpg">
-                                <h5 class="mb--0">Belajar Copywriting</h5>
-                                <div>Entire home ◦ 2 bedrooms</div>
-                            </a>
+                            <div class="program-madrasah mb-5">
+                                <div class="program-icon"> 
+                                    <img alt="Belajar Digital Marketing" src="assets/images/icon-program-4.jpg" class="rounded rounded-circle">
+                                </div>
+                                <h4 class="mt-3">Digital Marketing</h4>
+                            </div>
                         </div>
                         <div class="col-md-3 col-6">
-                            <a href="#" class="feature"> <img alt="Pic" src="assets/img/accom-1.jpg">
-                                <h5 class="mb--0">Belajar Internet Marketing</h5>
-                                <div>Entire home ◦ 2 bedrooms</div>
-                            </a>
+                            <div class="program-madrasah mb-5">
+                                <div class="program-icon"> 
+                                    <img alt="Belajar Copywriting" src="assets/images/icon-program-5.jpg" class="rounded rounded-circle">
+                                </div>
+                                <h4 class="mt-3">Copywriting</h4>
+                            </div>
                         </div>
                         <div class="col-md-3 col-6">
-                            <a href="#" class="feature"> <img alt="Pic" src="assets/img/accom-4.jpg">
-                                <h5 class="mb--0">Belajar Video Editing</h5>
-                                <div>Entire home ◦ 2 bedrooms</div>
-                            </a>
+                            <div class="program-madrasah mb-5">
+                                <div class="program-icon"> 
+                                    <img alt="Belajar Video Editing" src="assets/images/icon-program-6.jpg" class="rounded rounded-circle">
+                                </div>
+                                <h4 class="mt-3">Video Editing</h4>
+                            </div>
                         </div>
                         <div class="col-md-3 col-6">
-                            <a href="#" class="feature"> <img alt="Pic" src="assets/img/accom-2.jpg">
-                                <h5 class="mb--0">Belajar Hidroponik</h5>
-                                <div>Entire home ◦ 4 bedrooms</div>
-                            </a>
+                            <div class="program-madrasah mb-5">
+                                <div class="program-icon"> 
+                                    <img alt="Belajar Hidroponik" src="assets/images/icon-program-7.jpg" class="rounded rounded-circle">
+                                </div>
+                                <h4 class="mt-3">Hidroponik</h4>
+                            </div>
                         </div>
                         <div class="col-md-3 col-6">
-                            <a href="#" class="feature"> <img alt="Pic" src="assets/img/accom-3.jpg">
-                                <h5 class="mb--0">Belajar Public Speaking</h5>
-                                <div>Entire home ◦ 3 bedrooms</div>
-                            </a>
+                            <div class="program-madrasah mb-5">
+                                <div class="program-icon"> 
+                                    <img alt="Belajar Public Speaking" src="assets/images/icon-program-8.jpg" class="rounded rounded-circle">
+                                </div>
+                                <h4 class="mt-3">Public Speaking</h4>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -305,7 +321,7 @@
                     </div>
                 </div>
             </section>
-            <section class="text-center bg--secondary">
+            <section class="text-center">
                 <div class="container">
                     <h2 class="type--bold mb-3 text--color-madrasah-dark">Produk Madrasah Digital</h2>
                     <p class="lead mb-5"> Produk-produk yang telah membantu kami membangun pesantren gratis untuk para penghafal Al-Qur'an </p>
