--- a/index.html
+++ b/index.html
@@ -259,49 +259,41 @@
                     <div class="row">
                         <div class="col-lg-6 col-md-6">
                             <h2 class="type--bold mb-3 text--color-madrasah-dark">Program Habit Development</h2>
-                            <p class="lead mb-5"> Program-program yang diselenggarakan di Madrasah Digital untuk membentuk mental dan habit para santri</p>
+                            <p class="lead mb-5"> Para santri akan dibentuk mental dan karakternya dengan berbagai kebiasaan baik yang dilakukan terus-menerus</p>
                         </div>
                     </div>
 
                     <div class="row">
-                        <div class="col-md-6 col-lg-3">
-                            <div class="text-block"> <i class="icon icon--lg icon-Mail-3 color--dark"></i>
+                        <div class="col-md-6 col-lg-3 col-6">
+                            <div class="text-block"> <i class="icon icon--lg icon-Yes color--madrasah"></i>
                                 <h4>Tahajud Berjamaah</h4>
-                                <p> for marketing campaigns </p>
                             </div>
-                            <div class="text-block"> <i class="icon icon--lg icon-Mail-3 color--dark"></i>
+                            <div class="text-block"> <i class="icon icon--lg icon-Yes color--madrasah"></i>
                                 <h4>Kuliah Shubuh</h4>
-                                <p> for marketing campaigns </p>
                             </div>
                         </div>
-                        <div class="col-md-6 col-lg-3">
-                            <div class="text-block"> <i class="icon icon--lg icon-Air-Balloon color--dark"></i>
+                        <div class="col-md-6 col-lg-3 col-6">
+                            <div class="text-block"> <i class="icon icon--lg icon-Yes color--madrasah"></i>
                                 <h4>Olahraga Pagi</h4>
-                                <p> from a library over over 1,000 </p>
                             </div>
-                            <div class="text-block"> <i class="icon icon--lg icon-Air-Balloon color--dark"></i>
+                            <div class="text-block"> <i class="icon icon--lg icon-Yes color--madrasah"></i>
                                 <h4>Sholat Dhuha</h4>
-                                <p> from a library over over 1,000 </p>
                             </div>
                         </div>
-                        <div class="col-md-6 col-lg-3">
-                            <div class="text-block"> <i class="icon icon--lg icon-Bacteria color--dark"></i>
+                        <div class="col-md-6 col-lg-3 col-6">
+                            <div class="text-block"> <i class="icon icon--lg icon-Yes color--madrasah"></i>
                                 <h4>Dzikir Pagi-Petang</h4>
-                                <p> for maximum flexibility </p>
                             </div>
-                            <div class="text-block"> <i class="icon icon--lg icon-Bacteria color--dark"></i>
+                            <div class="text-block"> <i class="icon icon--lg icon-Yes color--madrasah"></i>
                                 <h4>Shaum Senin-Kamis</h4>
-                                <p> for maximum flexibility </p>
                             </div>
                         </div>
-                        <div class="col-md-6 col-lg-3">
-                            <div class="text-block"> <i class="icon icon--lg icon-Fingerprint-2 color--dark"></i>
+                        <div class="col-md-6 col-lg-3 col-6">
+                            <div class="text-block"> <i class="icon icon--lg icon-Yes color--madrasah"></i>
                                 <h4>Shalat Berjamaah 5 Waktu</h4>
-                                <p> for maximum flexibility </p>
                             </div>
-                            <div class="text-block"> <i class="icon icon--lg icon-Fingerprint-2 color--dark"></i>
+                            <div class="text-block"> <i class="icon icon--lg icon-Yes color--madrasah"></i>
                                 <h4>Tadarus Ba'da Maghrib</h4>
-                                <p> for maximum flexibility </p>
                             </div>
                         </div>
                     </div>
