--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
             <section class="text-center">
                 <div class="container">
                     <h2 class="type--bold mb-3 text--color-madrasah-dark">Apa itu Madrasah Digital?</h2>
-                    <p class="lead mb-5"> Dengarkan apa kata mereka tentang program Madrasah Digital </p>
+                    <p class="lead mb-5"> Simak video berikut untuk mengetahui lebih detail tentang Madrasah Digital </p>
 
                     <div class="row">
                         <div class="col-md-12 col-lg-10">
