--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
                         <div class="col-md-3 col-6">
                             <div class="program-madrasah mb-5">
                                 <div class="program-icon"> 
-                                    <img alt="Belajar Bisnis Online" src="assets/images/icon-program-1.jpg" class="rounded rounded-circle">
+                                    <img alt="Belajar Bisnis Online" src="assets/images/icon-program-1.jpg" class="program-icon-asset">
                                 </div>
                                 <h4 class="mt-3">Bisnis Online</h4>
                             </div>
@@ -198,7 +198,7 @@
                         <div class="col-md-3 col-6">
                             <div class="program-madrasah mb-5">
                                 <div class="program-icon"> 
-                                    <img alt="Belajar Membuat Website" src="assets/images/icon-program-2.jpg" class="rounded rounded-circle">
+                                    <img alt="Belajar Membuat Website" src="assets/images/icon-program-2.jpg" class="program-icon-asset">
                                 </div>
                                 <h4 class="mt-3">Membuat Website</h4>
                             </div>
@@ -206,7 +206,7 @@
                         <div class="col-md-3 col-6">
                             <div class="program-madrasah mb-5">
                                 <div class="program-icon"> 
-                                    <img alt="Belajar Membuat Aplikasi Android" src="assets/images/icon-program-3.jpg" class="rounded rounded-circle">
+                                    <img alt="Belajar Membuat Aplikasi Android" src="assets/images/icon-program-3.jpg" class="program-icon-asset">
                                 </div>
                                 <h4 class="mt-3">Membuat Android App</h4>
                             </div>
@@ -214,7 +214,7 @@
                         <div class="col-md-3 col-6">
                             <div class="program-madrasah mb-5">
                                 <div class="program-icon"> 
-                                    <img alt="Belajar Digital Marketing" src="assets/images/icon-program-4.jpg" class="rounded rounded-circle">
+                                    <img alt="Belajar Digital Marketing" src="assets/images/icon-program-4.jpg" class="program-icon-asset">
                                 </div>
                                 <h4 class="mt-3">Digital Marketing</h4>
                             </div>
@@ -222,7 +222,7 @@
                         <div class="col-md-3 col-6">
                             <div class="program-madrasah mb-5">
                                 <div class="program-icon"> 
-                                    <img alt="Belajar Copywriting" src="assets/images/icon-program-5.jpg" class="rounded rounded-circle">
+                                    <img alt="Belajar Copywriting" src="assets/images/icon-program-5.jpg" class="program-icon-asset">
                                 </div>
                                 <h4 class="mt-3">Copywriting</h4>
                             </div>
@@ -230,7 +230,7 @@
                         <div class="col-md-3 col-6">
                             <div class="program-madrasah mb-5">
                                 <div class="program-icon"> 
-                                    <img alt="Belajar Video Editing" src="assets/images/icon-program-6.jpg" class="rounded rounded-circle">
+                                    <img alt="Belajar Video Editing" src="assets/images/icon-program-6.jpg" class="program-icon-asset">
                                 </div>
                                 <h4 class="mt-3">Video Editing</h4>
                             </div>
@@ -238,7 +238,7 @@
                         <div class="col-md-3 col-6">
                             <div class="program-madrasah mb-5">
                                 <div class="program-icon"> 
-                                    <img alt="Belajar Hidroponik" src="assets/images/icon-program-7.jpg" class="rounded rounded-circle">
+                                    <img alt="Belajar Hidroponik" src="assets/images/icon-program-7.jpg" class="program-icon-asset">
                                 </div>
                                 <h4 class="mt-3">Hidroponik</h4>
                             </div>
@@ -246,7 +246,7 @@
                         <div class="col-md-3 col-6">
                             <div class="program-madrasah mb-5">
                                 <div class="program-icon"> 
-                                    <img alt="Belajar Public Speaking" src="assets/images/icon-program-8.jpg" class="rounded rounded-circle">
+                                    <img alt="Belajar Public Speaking" src="assets/images/icon-program-8.jpg" class="program-icon-asset">
                                 </div>
                                 <h4 class="mt-3">Public Speaking</h4>
                             </div>
