--- a/index.html
+++ b/index.html
@@ -63,10 +63,10 @@
                     <div class="container">
                         <div class="row">
                             <div class="col-3 col-md-2">
-                                <a href="index.html"> <img class="logo logo-dark" alt="logo" src="assets/images/logo-madrasah-sm.png"> <img class="logo logo-light" alt="logo" src="assets/img/logo-md.png"> </a>
+                                <a href="https://www.madrasahdigital.id/"> <img class="logo logo-dark" alt="logo" src="assets/images/logo-madrasah-sm.png"> <img class="logo logo-light" alt="logo" src="assets/img/logo-md.png"> </a>
                             </div>
                             <div class="col-9 col-md-10 text-right">
-                                <a href="#" class="hamburger-toggle" data-toggle-class="#menu1;hidden-xs hidden-sm"> <i class="icon icon--sm stack-interface stack-menu"></i> </a>
+                                <a href="https://www.madrasahdigital.id/" class="hamburger-toggle" data-toggle-class="#menu1;hidden-xs hidden-sm"> <i class="icon icon--sm stack-interface stack-menu"></i> </a>
                             </div>
                         </div>
                     </div>
@@ -82,14 +82,14 @@
                             <div class="col-lg-11 col-md-12 text-right text-left-xs text-left-sm">
                                 <div class="bar__module">
                                     <ul class="menu-horizontal text-left">
-                                        <li> <a href="#">HOME<br></a> </li>
-                                        <li> <a href="#">PROFIL<br></a> </li>
-                                        <li> <a href="#">PROGRAM<br></a> </li>
-                                        <li> <a href="#">PRODUK<br></a> </li>
+                                        <!--<li> <a href="#">HOME<br></a> </li>-->
+                                        <li> <a href="#about" class="btn-scroll-to">PROFIL<br></a> </li>
+                                        <li> <a href="#program" class="btn-scroll-to">PROGRAM<br></a> </li>
+                                        <li> <a href="#produk" class="btn-scroll-to">PRODUK<br></a> </li>
                                         <li> <a href="https://photos.app.goo.gl/yVmxy7kV6UMGmF8V8" target="_blank">PEMBANGUNAN<br></a> </li>
                                         <li> <a href="https://kitabisa.com/patunganpesantren" target="_blank">DONASI<br></a> </li>
-                                        <li> <a href="#">BLOG<br></a> </li>
-                                        <li> <a href="#">KONTAK<br></a> </li>
+                                        <!--<li> <a href="#">BLOG<br></a> </li>-->
+                                        <li> <a href="#contact" class="btn-scroll-to">KONTAK<br></a> </li>
                                     </ul>
                                 </div>
                             </div>
@@ -106,11 +106,11 @@
                             <div class="mt--0">
                                 <h1 class="type--bold text--color-madrasah-dark"> Pesantren IT dan Tahfidz Al-Qur’an </h1>
                                 <p class="lead mb-5"> Membentuk 1 juta pengusaha dan ahli teknologi penghafal Al-Qur’an </p>
-                                <a class="btn btn--primary type--uppercase" href="#customise-template"> <span class="btn__text">
+                                <a class="btn btn--primary type--uppercase" href="#"> <span class="btn__text">
 							Pendaftaran Santri</span> </a> 
-                                <a class="btn btn--primary-1 type--uppercase" href="https://kitabisa.com/patunganpesantren"> <span class="btn__text">
+                                <a class="btn btn--primary-1 type--uppercase" href="https://kitabisa.com/patunganpesantren" target="_blank"> <span class="btn__text">
                             Donasi & Dukungan</span> </a>  
-                                <span class="block type--fine-print">atau <a href="index.html">lihat program pesantren</a></span>
+                                <span class="block type--fine-print">atau <a href="#program" class="btn-scroll-to">lihat program pesantren</a></span>
                             </div>
                         </div>
                         <!--<div class="col-lg-7 col-md-5 col-12"> <img alt="Image" src="assets/img/device-2.png"> </div>-->
@@ -144,7 +144,7 @@
                 </div>
             </section>
 
-            <section class="text-center">
+            <section class="text-center" id="about">
                 <div class="container">
                     <h2 class="type--bold mb-3 text--color-madrasah-dark">Apa itu Madrasah Digital?</h2>
                     <p class="lead mb-5"> Simak video berikut untuk mengetahui lebih detail tentang Madrasah Digital </p>
@@ -177,7 +177,7 @@
                 </div>
             </section>-->
 
-            <section class="bg--secondary text-center">
+            <section class="bg--secondary text-center" id="program">
                 <div class="container">
                     <h2 class="type--bold mb-3 text--color-madrasah-dark">Program Pembekalan Keahlian</h2>
                     <div class="row justify-content-center">
@@ -313,7 +313,7 @@
                     </div>
                 </div>
             </section>
-            <section class="text-center">
+            <section class="text-center" id="produk">
                 <div class="container">
                     <h2 class="type--bold mb-3 text--color-madrasah-dark">Produk Madrasah Digital</h2>
                     <p class="lead mb-5"> Produk-produk yang telah membantu kami membangun pesantren gratis untuk para penghafal Al-Qur'an </p>
@@ -369,10 +369,10 @@
                         <a href="https://www.persis67benda.com/" target="_blank"><img alt="Partner Madrasah Digital - Pecinta Quran" class="d-inline-block logo-partner mx-5 mb-5" src="assets/images/logo-benda.png"></a>
                     </div>
 
-                    <a class="btn mt-4" href="https://forms.gle/JX4E6tx9WeUXaWnz8" target="_blank"><span class="btn__text">Gabung sebagai mitra</span></a>
+                    <a class="btn mt-4" href="#"><span class="btn__text">Gabung sebagai mitra</span></a>
                 </div>
             </section>
-            <section class="switchable switchable--switch bg--secondary">
+            <section class="switchable switchable--switch bg--secondary" id="contact">
                 <div class="container">
                     <div class="row justify-content-between">
                         <div class="col-lg-6 col-md-7 col-12">
@@ -403,18 +403,18 @@
                         </div>
                         <div class="col-sm-6 text-right text-center visible-xs">
                             <ul class="social-list list-inline list--hover">
-                                <li><a href="#"><i class="socicon socicon-google icon icon--xs"></i></a></li>
-                                <li><a href="#"><i class="socicon socicon-twitter icon icon--xs"></i></a></li>
-                                <li><a href="#"><i class="socicon socicon-facebook icon icon--xs"></i></a></li>
-                                <li><a href="#"><i class="socicon socicon-instagram icon icon--xs"></i></a></li>
+                                <!--<li><a href="#"><i class="socicon socicon-google icon icon--xs"></i></a></li>
+                                <li><a href="#"><i class="socicon socicon-twitter icon icon--xs"></i></a></li>-->
+                                <li><a href="https://www.facebook.com/madrasahdigital.id" target="_blank"><i class="socicon socicon-facebook icon icon--xs"></i></a></li>
+                                <li><a href="https://www.instagram.com/madrasahdigital/" target="_blank"><i class="socicon socicon-instagram icon icon--xs"></i></a></li>
                             </ul>
                         </div>
                         <div class="col-sm-6 text-right text-right hidden-xs">
                             <ul class="social-list list-inline list--hover">
-                                <li><a href="#"><i class="socicon socicon-google icon icon--xs"></i></a></li>
-                                <li><a href="#"><i class="socicon socicon-twitter icon icon--xs"></i></a></li>
-                                <li><a href="#"><i class="socicon socicon-facebook icon icon--xs"></i></a></li>
-                                <li><a href="#"><i class="socicon socicon-instagram icon icon--xs"></i></a></li>
+                                <!--<li><a href="#"><i class="socicon socicon-google icon icon--xs"></i></a></li>
+                                <li><a href="#"><i class="socicon socicon-twitter icon icon--xs"></i></a></li>-->
+                                <li><a href="https://www.facebook.com/madrasahdigital.id" target="_blank"><i class="socicon socicon-facebook icon icon--xs"></i></a></li>
+                                <li><a href="https://www.instagram.com/madrasahdigital/" target="_blank"><i class="socicon socicon-instagram icon icon--xs"></i></a></li>
                             </ul>
                         </div>
                     </div>
@@ -428,6 +428,16 @@
         <script src="assets/js/parallax.js"></script>
         <script src="assets/js/smooth-scroll.min.js"></script>
         <script src="assets/js/scripts.js"></script>
+
+        <script>
+        $( ".btn-scroll-to" ).click(function() {
+            var target = $(this).attr("href");
+            
+            $('html, body').animate({
+                scrollTop: ($(target).first().offset().top)
+            },500);
+        });
+        </script>
 
     </body>
 
