Sembunyikan tombol gabung partner

--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@
                         <a href="https://www.persis67benda.com/" target="_blank"><img alt="Partner Madrasah Digital - Pecinta Quran" class="d-inline-block logo-partner mx-5 mb-5" src="assets/images/logo-benda.png"></a>
                     </div>
 
-                    <a class="btn mt-4" href="#"><span class="btn__text">Gabung sebagai mitra</span></a>
+                    <!--<a class="btn mt-4" href="#"><span class="btn__text">Gabung sebagai mitra</span></a>-->
                 </div>
             </section>
             <section class="switchable switchable--switch bg--secondary" id="contact">
